hphp/hack/test/typecheck/reactive/owned_mutable6.php
<?hh

function f(): void {
  // ERROR
  $x = (<<__OwnedMutable>> A $c) ==> {};
}

interface A {}
